force-app/main/default/objects/ProcedureAlertParameters__c/ProcedureAlertParameters__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Procedure Alert Parameters</label>
</CustomObject>