force-app/main/default/objects/ProcedureAlertParameters__c/fields/days__c.field-meta.xml
<CustomField>
    <fullName>days__c</fullName>
    <label>days(Mail Notification)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>