force-app/main/default/objects/ProcedureAlertParameters__c/fields/No_of_days__c.field-meta.xml
<CustomField>
    <fullName>No_of_days__c</fullName>
    <label>No of days (Static Procedure)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>